src/test/ui/error-codes/E0407.stderr
error[E0407]: method `b` is not a member of trait `Foo`
  --> $DIR/E0407.rs:19:5
   |
LL |     fn b() {}
   |     ^^^^^^^^^ not a member of trait `Foo`

error: aborting due to previous error

If you want more information on this error, try using "rustc --explain E0407"
